# huntsman-pocs

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  LICENSE.txt  README.md  README.rst  conftest.py  live-run.patch  requirements.txt  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: camera_server.yml  docker.yml  publish_device_startup.yml  pythontest.yaml
conf_files/: device_info.yaml  device_info_master.yaml  dfw_config.yaml  huntsman.bk  huntsman.yaml  huntsman_l.bk  huntsman_local_1cam.yaml  huntsman_local_all_cams.yaml  parsers_config.yaml  pocs.yaml  pyro_camera.yaml  set_lights.yaml  simulator.yaml  state_machine.yaml  targets.yaml  testing.yaml  untitled.txt  weather_config.yaml
conf_files_test/huntsman_archive/: huntsman_2018_02_08_14_51.yaml
docker/: Dockerfile  README.md  camera_server.docker  device_startup.docker  docker-compose.yaml  environment.yaml  huntsman_cameraserver.docker
docker/POCS/: Dockerfile  README.md  environment.yaml
docker/arm_device/: Dockerfile  dockerfile  startup.sh
docker/camera/: Dockerfile  docker-compose.yaml  docker-compose.yml  dockerfile
docker/developer/: Dockerfile
docker/panoptes-utils/: Dockerfile  README.md  environment.yaml
docker/testenv/: Dockerfile  docker-compose.yaml  startup.sh
docker/testing/: docker-compose.yml
docs/: Makefile  conf.py  index.rst
examples/notebooks/: README.md  Running Huntsman.ipynb  generating_yaml.py  generating_yaml_example.ipynb
huntsman/: observatory.py
huntsman/camera/: __init__.py  pyro.py
huntsman/dome/: musca.py
huntsman/filterwheel/: pyro.py
huntsman/focuser/: pyro.py
huntsman/guide/: bisque.py
huntsman/scheduler/: dark_observation.py  dispatch.py  observation.py  scheduler.py
huntsman/tests/: conftest.py  test_aardvark.py  test_alert_pocs.py  test_camera.py  test_dither.py  test_grav_wave.py  test_hdr.py  test_hue_light_control.py  test_huntsman.py  test_huntsman_observatory.py  test_observatory.py  test_states.py
huntsman/utils/: Hub_utils_check.py  __init__.py  config.py  dither.py  flats.py  hdr.py  hub_utils.py  hue_light_control.py  light_control.py  sshfs.py  sshfs_mount.py  states.py
huntsman/utils/pyro/: __init__.py  camera_server.py  event.py  name_server.py  serialisers.py  serializers.py  test_server.py
huntsman/utils/too/: alert_pocs.py
huntsman/utils/too/grav_wave/: grav_wave.py
huntsman/utils/too/horizon/: horizon_range.py
huntsman/utils/too/parsers/: grav_wave_parser.py
hwms/: sqm_reader.py  weather_23m.py  weather_AAT.py  weather_abstract.py  weather_skymap.py
resources/bisque/dome/: home.js  unpark.js
resources/bisque/mount/: closed_loop_slew_to_target.js
resources/docker/: entrypoint.sh
resources/mounts/bisque/: meii.yaml
resources/rpi/: meta-data  network-config  user-data  usercfg.txt
resources/state_table/: huntsman.yaml
scripts/: README.md  archive-images.py  archive_fits_images.py  auto_sshfs_mount.py  build-pocs-image.sh  byobu_start.sh  byobu_startup.py  daytimeobs.py  dfw_manual_functions.py  dfw_run_script.py  dwf.py  foo.py  gcn_processing.py  generating_yaml.py  get-focus-offsets.py  helpers.py  install-camera-libs.sh  install-camera-pi.sh  install-huntsman-pi.sh  install_asi_libs.sh  manual_functions.py  monitor_dome.py  mount_sshfs.py  pyro_camera_server.py  pyro_config_server.py  pyro_name_server.py  pyro_test_server.py  read_aat_weather.py  read_alt_weather.py  read_skymapper_weather.py  run_device.py  run_device_container.sh  run_pocs_ipython.py  setup-local-environment.sh  start_config_server.py  startup_device.py  sync_data_with_remote_server.py  take_day_flats.py  upload.py  vignetting_sequence.py  (+1 more)
scripts/camera/: install-camera-libs.sh  install-camera-pi.sh  install-camera.sh  run-camera-service.sh  start-byobu.sh
scripts/testing/: run-docker-tests.sh  run-local-tests.sh  run-tests.sh  run_docker_tests.sh  run_local_tests.sh  test-software.sh
src/huntsman/pocs/: __init__.py  archive.py  autoflats.py  core.py  error.py  observatory.py  version.py
src/huntsman/pocs/archive/: archiver.py  utils.py
src/huntsman/pocs/camera/: __init__.py  camera.py  group.py  pyro.py  utils.py  zwo.py
src/huntsman/pocs/camera/pyro/: client.py  service.py
src/huntsman/pocs/camera/simulator/: camera.py
src/huntsman/pocs/dome/: __init__.py  musca.py  simulator.py
src/huntsman/pocs/filterwheel/: pyro.py  zwo.py
src/huntsman/pocs/focuser/: __init__.py  astromechanics.py  birger.py  pyro.py  serial.py  simulator.py
src/huntsman/pocs/guide/: bisque.py
src/huntsman/pocs/mount/: __init__.py  bisque.py  simulator.py
src/huntsman/pocs/scheduler/: __init__.py  constraint.py  dark_observation.py  dispatch.py  field.py  observation.py
src/huntsman/pocs/scheduler/observation/: base.py  bias.py  dark.py  dithered.py  flat.py  offsetsky.py
src/huntsman/pocs/states/huntsman/: analyzing.py  coarse_focusing.py  dithering.py  focusing.py  housekeeping.py  initialising.py  observing.py  parked.py  parking.py  pointing.py  ready.py  scheduling.py  sleeping.py  slewing.py  starting.py  taking_darks.py  twilight_flat_fielding.py
src/huntsman/pocs/tests/: conftest.py  test_aardvark.py  test_archiver.py  test_camera.py  test_dither.py  test_huntsman.py  test_observatory.py  test_pyro_servers.py  test_states.py
src/huntsman/pocs/utils/: __init__.py  config.py  dither.py  error.py  flats.py  focus.py  hdr.py  huntsman.py  logger.py  safety.py  sshfs.py  weather.py
states/: calibrating.py
states/huntsman/: analyzing.py  calibrating.py  coarse_focusing.py  dark-collecting.py  dithering.py  focusing.py  housekeeping.py  observing.py  parked.py  pointing.py  preparing.py  ready.py  scheduling.py  sleeping.py  taking_darks.py  twilight_flat_fielding.py
tests/: Dockerfile  docker-compose.yml  env  pocs_testing.yaml  test_aardvark.py  test_archive.py  test_camera.py  test_camera_group.py  test_dither.py  test_huntsman.py  test_observatory.py  test_pyro_servers.py  test_scheduler.py  test_states.py  testing.yaml
(+9 files in other folders)
