[aliases]
test=pytest

[tool:pytest]
testpaths= huntsman/tests
python_files= test_*.py
norecursedirs= scripts
addopts= --doctest-modules --mpl
doctest_optionflags= ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
filterwarnings =
    ignore:elementwise == comparison failed:DeprecationWarning

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
author = Huntsman Telephoto Array Team
author_email = [Lee Spitler]
description = Canon camera array for detecting faint astronomical phenomena
edit_on_github = True
github_project = AstroHuntsman/huntsman-pocs
keywords = galaxies canon lenses astronomy automated observatory
license = MIT
long_description = Huntsman observatory is a fully automated remote observatory based at Siding Spring Observatory in Australia
package_name = huntsman
url = https://www.facebook.com/AstroHuntsman/
