# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = huntsman-pocs
author = Huntsman Telephoto Array Team
author_email = [Lee Spitler]
license = mit
edit_on_github = True
github_project = AstroHuntsman/huntsman-pocs
keywords = galaxies canon lenses astronomy automated observatory

long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
project-urls =
    Main = https://huntsman.space
    Facebook =https://www.facebook.com/AstroHuntsman
platforms = linux
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
scripts =
    bin/huntsman-shell
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    PyYaml
    Pyro5
    astroplan
    astropy
    matplotlib
    netifaces
    numpy
    msgpack
    panoptes-pocs[focuser]>=0.7.7
    panoptes-utils[config,images,social]>=0.2.31
    photutils
    requests

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install huntsman-pocs[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    coverage
    pycodestyle
    pytest
    pytest-cov
    pytest-doctestplus
    pytest-mpl
    pytest-remotedata>=0.3.1
    responses

[options.entry_points]
# Add here console scripts like:
console_scripts =
    huntsman-pyro = huntsman.pocs.utils.pyro.cli:entry_point

[tool:pytest]
addopts =
    --cov huntsman.pocs
    --cov tests
    --cov-branch
    --cov-report term-missing:skip-covered
    --cov-report xml:build/coverage.xml
    --no-cov-on-fail
    --doctest-modules
    --doctest-ignore-import-errors
    --failed-first
    -x
    -vv
norecursedirs =
    docker
    script
    resources
    dist
    build
    .tox
testpaths = tests src
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
filterwarnings =
    ignore:elementwise == comparison failed:DeprecationWarning
    ignore::pytest.PytestDeprecationWarning
doctest_plus = enabled
markers =
    without_camera
    with_camera
    without_mount
    with_mount
    without_sensors
    with_sensors

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pycodestyle]
max-line-length = 100

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = pocs
extensions =
    no_skeleton
    namespace
    markdown
namespace = huntsman

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
# Have to re-enable the standard pragma
    pragma: no cover

# Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

# Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

# Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True
